svg icons + adding class

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -39,7 +39,7 @@ p {
 
 .social-links {
     display: flex;
-    gap: 1.5rem;
+    gap: 10px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
